--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
     body { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #fce4ec 0%, #f8bbd9 50%, #e1bee7 100%); min-height: 100vh; overflow-x: hidden; }
 
     /* Animated Background with Stars */
+    /* Hamburger Button Style */
+.hamburger-btn {
+  display: none; /* ซ่อนไว้เมื่ออยู่บน PC */
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  color: #e91e63;
+  cursor: pointer;
+  padding: 0.5rem;
+  z-index: 101; /* ให้อยู่เหนือเมนูอื่นๆ */
+}
+
+/* Style for mobile-opened menu */
+.nav-menu.active {
+  display: flex !important; /* บังคับให้แสดงเมื่อมี class 'active' */
+  flex-direction: column;
+  position: absolute;
+  top: 100%; /* อยู่ใต้ Header */
+  left: 0;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.98);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  padding: 1rem 0;
+}
+
+.nav-menu.active li {
+  width: 100%;
+  text-align: center;
+}
+
+.nav-menu.active a {
+  display: block;
+  width: 90%;
+  margin: 0.5rem auto;
+  border-bottom: 1px solid rgba(233, 30, 99, 0.1);
+}
+
+/* เปิดปุ่ม Hamburger บนมือถือ */
+@media (max-width: 600px) {
+  /* ... โค้ดที่ปรับแล้วจากข้อ 1.1 ... */
+  .hamburger-btn {
+    display: block; /* แสดงปุ่ม Hamburger */
+  }
+}
     .bg-animation { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; opacity: 0.2; }
     .floating-star { position: absolute; animation: floatStar 8s ease-in-out infinite; }
     .floating-star svg { width: 25px; height: 25px; }
@@ -139,15 +183,36 @@
     footer { text-align: center; padding: 2rem; color: #666; background: rgba(255, 255, 255, 0.8); }
 
     /* Responsive */
-    @media (max-width: 900px) {
-      nav { flex-direction: column; gap: .5rem; }
-      .nav-row { width: 100%; justify-content: space-between; }
-      .nav-menu { flex-wrap: wrap; }
-      .hero h1 { font-size: 2rem; }
-      .hero p { font-size: 1rem; }
-      .about { margin: 2rem 1rem; padding: 3rem 1.5rem; border-radius: 30px; }
-      .about-content { grid-template-columns: 1fr; gap: 2rem; text-align: center; }
-    }
+    @media (max-width: 600px) {
+  /* ซ่อนเมนูนำทางปกติ */
+  .nav-menu { display: none; } 
+
+  /* จัดเรียง Header ใหม่ */
+  nav { 
+    flex-direction: row; 
+    justify-content: space-between; 
+    align-items: center; 
+    padding: 0 1.5rem; /* ลด padding ด้านข้าง */
+  }
+  .nav-row { width: auto; } /* ไม่ต้องใช้ width: 100% */
+  .logo { font-size: 1.4rem; }
+  
+  /* จัดเรียง Language selector ให้ชิดขวา*/
+  .lang-select { margin-left: auto; }
+
+  /* ปรับขนาดตัวอักษรในส่วน Hero */
+  .hero h1 { font-size: 1.8rem; }
+  .hero p { font-size: 0.95rem; }
+
+  /* ปรับให้ Product grid แสดงแค่ 1 คอลัมน์ */
+  .products-grid { grid-template-columns: 1fr; }
+  
+  /* ปรับ Contact info ให้แสดงแค่ 1 คอลัมน์ */
+  .contact-info { grid-template-columns: 1fr; }
+
+  /* ปรับ Values grid ให้แสดงแค่ 1 คอลัมน์ */
+  .values-grid { grid-template-columns: 1fr; }
+}
 
     /* Animations */
     @keyframes fadeInUp { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
@@ -167,6 +232,11 @@
   <header>
     <nav>
       <div class="nav-row">
+         <a href="#" class="logo" data-i18n="brand">Heaven &amp; Beauty</a>
+    </div>
+    <button class="hamburger-btn" aria-label="Toggle navigation menu">☰</button>
+    <ul class="nav-menu">
+      </ul>
         <a href="#" class="logo" data-i18n="brand">Heaven &amp; Beauty</a>
       </div>
       <ul class="nav-menu">
@@ -444,7 +514,32 @@
         });
       });
     });
+// ... โค้ด Product filtering เดิม ...
 
+    // Hamburger Menu Toggle
+    const hamburgerBtn = document.querySelector('.hamburger-btn');
+    const navMenu = document.querySelector('.nav-menu');
+
+    if (hamburgerBtn) {
+        hamburgerBtn.addEventListener('click', () => {
+            navMenu.classList.toggle('active');
+        });
+        
+        // ปิดเมนูเมื่อคลิกที่ลิงก์ในเมนู (เฉพาะบนมือถือ)
+        navMenu.querySelectorAll('a').forEach(link => {
+            link.addEventListener('click', () => {
+                // ใช้ setTimeout เพื่อให้ smooth scroll ทำงานเสร็จก่อน
+                setTimeout(() => {
+                    if (window.innerWidth <= 600) {
+                        navMenu.classList.remove('active');
+                    }
+                }, 300); 
+            });
+        });
+    }
+
+    // i18n strings (TH/EN/ZH/JA/KO)
+    // ... โค้ด i18n ที่มีอยู่เดิม ...
     // i18n strings (TH/EN/ZH/JA/KO)
     const I18N = {
       th: {
