--- a/index.html
+++ b/index.html
@@ -292,6 +292,18 @@
 
     /* Animations */
     @keyframes fadeInUp { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
+    /* MOBILE ONLY: ใช้ไอคอนลูกโลกแทนข้อความ Language: */
+@media (max-width: 480px){
+  .lang-select label { display: none; }   /* ซ่อนข้อความ Language: */
+  .lang-select::before {
+    content: "🌐";                        /* ไอคอนลูกโลก */
+    font-size: 1.2rem;
+    margin-right: .3rem;
+    display: inline-block;
+    line-height: 1;
+  }
+}
+
   </style>
 </head>
 <body>
