--- a/index.html
+++ b/index.html
@@ -292,17 +292,38 @@
 
     /* Animations */
     @keyframes fadeInUp { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
-    /* MOBILE ONLY: ใช้ไอคอนลูกโลกแทนข้อความ Language: */
+/* MOBILE: ใช้ไอคอนลูกโลกแทน dropdown ที่กินที่ */
 @media (max-width: 480px){
-  .lang-select label { display: none; }   /* ซ่อนข้อความ Language: */
-  .lang-select::before {
-    content: "🌐";                        /* ไอคอนลูกโลก */
-    font-size: 1.2rem;
-    margin-right: .3rem;
-    display: inline-block;
-    line-height: 1;
+  .lang-select{ position: relative; gap:.4rem; }
+  .lang-select label{ display:none; }          /* ซ่อนคำว่า Language: */
+
+  /* ไอคอนลูกโลก */
+  .lang-select::before{
+    content:"🌐";
+    font-size:1.25rem;
+    line-height:1;
+    display:inline-block;
+    padding:.35rem .45rem;
+    border-radius:999px;
+    background: rgba(233,30,99,.08);
+    box-shadow:0 1px 4px rgba(0,0,0,.08) inset;
+  }
+
+  /* ทำ <select> โปร่งใสและทับบนไอคอน เพื่อเรียก native picker */
+  .lang-select select{
+    appearance:none; -webkit-appearance:none; -moz-appearance:none;
+    background:transparent; border:0; outline:0;
+    position:absolute; right:0; top:50%; transform:translateY(-50%);
+    width:36px; height:36px; opacity:0; cursor:pointer;
+  }
+
+  /* เอฟเฟกต์ตอนโฟกัส (iOS/Android เปิด picker) */
+  .lang-select:focus-within::before{
+    outline:2px solid rgba(233,30,99,.4);
+    outline-offset:2px;
   }
 }
+
 
   </style>
 </head>
