--- a/index.html
+++ b/index.html
@@ -547,12 +547,12 @@
       <div class="contact-item">
         <span class="contact-item-icon">📍</span>
         <h3 data-i18n="contact.branch">สาขาหลัก</h3>
-        <p data-i18n="contact.addr">เซ็นทรัลเวิลด์ ชั้น 3<br>999/9 เพลินจิต กรุงเทพฯ 10330</p>
+        <p data-i18n="contact.addr">โครงการ HAVANA<br>เลขที่777 333 Cho Ho, เมือง Nakhon Ratchasima 30000</p>
       </div>
       <div class="contact-item">
         <span class="contact-item-icon">📞</span>
         <h3 data-i18n="contact.phone">โทรศัพท์</h3>
-        <p data-i18n="contact.phone_detail">02-123-4567<br>หรือ 089-123-4567<br>เปิดทุกวัน 10:00–22:00 น.</p>
+        <p data-i18n="contact.phone_detail">098-549-7939<br>เปิดทุกวัน 10:00–22:00 น.</p>
       </div>
       <div class="contact-item">
         <span class="contact-item-icon">💌</span>
