--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <title>Heaven and Beauty - Wellness & Organic Beauty</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-/F9C0vFiKhv6KRkFdXKnQQ2Fj2Ahg17eqbAzZzBjcXFLK8opKa5tuPUbsy9vI0D0LPsr1HOuwyL/0I1nqOrFow==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" 
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" 
+  integrity="sha512-/F9C0vFiKhv6KRkFdXKnQQ2Fj2Ahg17eqbAzZzBjcXFLK8opKa5tuPUbsy9vI0D0LPsr1HOuwyL/0I1nqOrFow==" 
+  crossorigin="anonymous" 
+  referrerpolicy="no-referrer" />
 
   <style>
     body { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #fce4ec 0%, #f8bbd9 50%, #e1bee7 100%); min-height: 100vh; overflow-x: hidden; padding-top: 50px; /* เพิ่ม padding ด้านบนเพื่อหลีกเลี่ยง Header ที่ sticky */ }
@@ -561,13 +565,25 @@
         <p>info@heavenbeauty.com<br>support@heavenbeauty.com<br><span data-i18n="contact.sla">ตอบกลับภายใน 24 ชั่วโมง</span></p>
       </div>
     </div>
-    <div class="social-links">
-  <a href="https://facebook.com" class="social-link" title="Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
-  <a href="https://instagram.com" class="social-link" title="Instagram" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
-  <a href="https://line.me/R/ti/p/@heavenbeauty" class="social-link" title="LINE" target="_blank" rel="noopener"><i class="fab fa-line"></i></a>
-  <a href="https://tiktok.com" class="social-link" title="TikTok" target="_blank" rel="noopener"><i class="fab fa-tiktok"></i></a>
-  <a href="mailto:info@heavenbeauty.com" class="social-link" title="Email"><i class="fas fa-envelope"></i></a>
+    <!-- Social Icons -->
+<div class="social-icons" style="display:flex;justify-content:center;gap:20px;margin-top:20px;">
+  <a href="https://facebook.com/yourpage" target="_blank" style="background:#ff4081;color:white;width:50px;height:50px;border-radius:50%;display:flex;align-items:center;justify-content:center;text-decoration:none;box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+    <i class="fab fa-facebook-f"></i>
+  </a>
+
+  <a href="https://instagram.com/yourpage" target="_blank" style="background:#ff4081;color:white;width:50px;height:50px;border-radius:50%;display:flex;align-items:center;justify-content:center;text-decoration:none;box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+    <i class="fab fa-instagram"></i>
+  </a>
+
+  <a href="https://line.me/ti/p/~yourlineid" target="_blank" style="background:#ff4081;color:white;width:50px;height:50px;border-radius:50%;display:flex;align-items:center;justify-content:center;text-decoration:none;box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+    <i class="fab fa-line"></i>
+  </a>
+
+  <a href="https://tiktok.com/@yourpage" target="_blank" style="background:#ff4081;color:white;width:50px;height:50px;border-radius:50%;display:flex;align-items:center;justify-content:center;text-decoration:none;box-shadow:0 4px 10px rgba(0,0,0,0.2);">
+    <i class="fab fa-tiktok"></i>
+  </a>
 </div>
+
 
   </section>
 
