--- a/index.html
+++ b/index.html
@@ -385,7 +385,13 @@
   <header>
     <nav>
       <nav class="navbar">
-  <div class="nav-left">
+  <div class="nav-left" style="display:flex;align-items:center;gap:24px;">
+    <!-- โลโก้ -->
+    <a href="#home" class="brand" style="display:inline-flex;align-items:center;gap:10px;">
+      <img src="./assets/logo.png" alt="Heaven and Beauty" style="height:50px;width:auto;object-fit:contain;">
+    </a>
+
+    <!-- เมนู -->
     <ul class="nav-menu">
       <li><a href="#home" class="active">หน้าแรก</a></li>
       <li><a href="#products">ผลิตภัณฑ์</a></li>
@@ -406,6 +412,7 @@
     </select>
   </div>
 </nav>
+
 
     </nav>
   </header>
