--- a/index.html
+++ b/index.html
@@ -326,8 +326,9 @@
       <!-- (การ์ดสินค้าเหมือนเดิมทั้งหมด) -->
       <div class="product-card" data-category="skincare">
         <div class="product-image">
-          <svg viewBox="0 0 100 120" class="product-svg"><defs><linearGradient id="bottleGrad1" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" style="stop-color:#f8bbd9;stop-opacity:1" /><stop offset="100%" style="stop-color:#e91e63;stop-opacity:1" /></linearGradient></defs><rect x="30" y="20" width="40" height="80" rx="8" fill="url(#bottleGrad1)" opacity="0.8"/><rect x="35" y="10" width="30" height="15" rx="3" fill="#e91e63"/><circle cx="50" cy="17" r="3" fill="#fff"/></svg>
-        </div>
+  <img src="assets/products/serum.jpg" alt="เซรั่มบำรุงผิวหน้า" loading="lazy">
+</div>
+
         <div class="product-info">
           <h3 data-i18n="p1.name">เซรั่มบำรุงผิวหน้า</h3>
           <p data-i18n="p1.desc">เซรั่มจากสารสกัดธรรมชาติ ช่วยให้ผิวเปล่งปลั่งและชุ่มชื้น</p>
@@ -341,8 +342,9 @@
 
       <div class="product-card" data-category="skincare">
         <div class="product-image">
-          <svg viewBox="0 0 100 120" class="product-svg"><defs><linearGradient id="bottleGrad2" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" style="stop-color:#c8e6c9;stop-opacity:1" /><stop offset="100%" style="stop-color:#4caf50;stop-opacity:1" /></linearGradient></defs><rect x="25" y="25" width="50" height="70" rx="10" fill="url(#bottleGrad2)" opacity="0.8"/><rect x="30" y="15" width="40" height="15" rx="5" fill="#4caf50"/><circle cx="50" cy="22" r="4" fill="#fff"/></svg>
-        </div>
+  <img src="assets/products/serum.jpg" alt="เซรั่มบำรุงผิวหน้า" loading="lazy">
+</div>
+
         <div class="product-info">
           <h3 data-i18n="p2.name">ครีมบำรุงผิวกาย</h3>
           <p data-i18n="p2.desc">ครีมบำรุงผิวจากอโลเวร่าและน้ำมันธรรมชาติ เพื่อผิวนุ่มเนียน</p>
@@ -355,9 +357,10 @@
       </div>
 
       <div class="product-card" data-category="wellness">
-        <div class="product-image">
-          <svg viewBox="0 0 100 120" class="product-svg"><defs><linearGradient id="bottleGrad3" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" style="stop-color:#e1bee7;stop-opacity:1" /><stop offset="100%" style="stop-color:#9c27b0;stop-opacity:1" /></linearGradient></defs><circle cx="50" cy="60" r="35" fill="url(#bottleGrad3)" opacity="0.8"/><rect x="45" y="20" width="10" height="20" rx="5" fill="#9c27b0"/><circle cx="50" cy="25" r="3" fill="#fff"/></svg>
-        </div>
+       <div class="product-image">
+  <img src="assets/products/serum.jpg" alt="เซรั่มบำรุงผิวหน้า" loading="lazy">
+</div>
+
         <div class="product-info">
           <h3 data-i18n="p3.name">อาหารเสริมคอลลาเจน</h3>
           <p data-i18n="p3.desc">คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน</p>
@@ -371,8 +374,9 @@
 
       <div class="product-card" data-category="aromatherapy">
         <div class="product-image">
-          <svg viewBox="0 0 100 120" class="product-svg"><defs><linearGradient id="bottleGrad4" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" style="stop-color:#fff3e0;stop-opacity:1" /><stop offset="100%" style="stop-color:#ff9800;stop-opacity:1" /></linearGradient></defs><rect x="35" y="30" width="30" height="60" rx="6" fill="url(#bottleGrad4)" opacity="0.8"/><rect x="40" y="20" width="20" height="15" rx="3" fill="#ff9800"/><circle cx="50" cy="27" r="2" fill="#fff"/></svg>
-        </div>
+  <img src="assets/products/serum.jpg" alt="เซรั่มบำรุงผิวหน้า" loading="lazy">
+</div>
+
         <div class="product-info">
           <h3 data-i18n="p4.name">น้ำมันหอมระเหย ลาเวนเดอร์</h3>
           <p data-i18n="p4.desc">น้ำมันหอมระเหยบริสุทธิ์ ช่วยผ่อนคลายและนอนหลับสบาย</p>
@@ -386,8 +390,9 @@
 
       <div class="product-card" data-category="skincare">
         <div class="product-image">
-          <svg viewBox="0 0 100 120" class="product-svg"><defs><linearGradient id="bottleGrad5" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" style="stop-color:#e8f5e8;stop-opacity:1" /><stop offset="100%" style="stop-color:#66bb6a;stop-opacity:1" /></linearGradient></defs><rect x="20" y="35" width="60" height="50" rx="12" fill="url(#bottleGrad5)" opacity="0.8"/><rect x="25" y="25" width="50" height="15" rx="7" fill="#66bb6a"/><circle cx="50" cy="32" r="5" fill="#fff"/></svg>
-        </div>
+  <img src="assets/products/serum.jpg" alt="เซรั่มบำรุงผิวหน้า" loading="lazy">
+</div>
+
         <div class="product-info">
           <h3 data-i18n="p5.name">มาส์กหน้าชาเขียว</h3>
           <p data-i18n="p5.desc">มาส์กหน้าจากชาเขียวออร์แกนิค ช่วยลดสิว และกระชับรูขุมขน</p>
@@ -400,9 +405,10 @@
       </div>
 
       <div class="product-card" data-category="wellness">
-        <div class="product-image">
-          <svg viewBox="0 0 100 120" class="product-svg"><defs><linearGradient id="bottleGrad6" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" style="stop-color:#fce4ec;stop-opacity:1" /><stop offset="100%" style="stop-color:#ec407a;stop-opacity:1" /></linearGradient></defs><rect x="30" y="25" width="40" height="70" rx="8" fill="url(#bottleGrad6)" opacity="0.8"/><rect x="35" y="15" width="30" height="15" rx="4" fill="#ec407a"/><circle cx="50" cy="22" r="3" fill="#fff"/></svg>
-        </div>
+       <div class="product-image">
+  <img src="assets/products/serum.jpg" alt="เซรั่มบำรุงผิวหน้า" loading="lazy">
+</div>
+
         <div class="product-info">
           <h3 data-i18n="p6.name">ชาดีท็อกซ์</h3>
           <p data-i18n="p6.desc">ชาสมุนไพรออร์แกนิค ช่วยขับสารพิษและเสริมสร้างภูมิคุ้มกัน</p>
