--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 </div>
 
         <div class="product-info">
-          <h3 data-i18n="p1.name">เกันเเดดตัว</h3>
+          <h3 data-i18n="p1.name">กันเเดดตัว</h3>
           <p data-i18n="p1.desc">เซรั่มจากสารสกัดธรรมชาติ ช่วยให้ผิวเปล่งปลั่งและชุ่มชื้น</p>
           <div class="product-price">฿1,290</div>
           <div class="product-actions">
@@ -569,10 +569,10 @@
         'hero.desc': 'เราคัดสรรส่วนผสมที่ดีที่สุดจากธรรมชาติ เพื่อสร้างสรรค์ผลิตภัณฑ์ออร์แกนิคที่ปลอดภัยและอ่อนโยนต่อผิวคุณ ดูแลสุขภาพและความงามอย่างธรรมชาติ',
         'hero.cta': 'สำรวจผลิตภัณฑ์',
         'products.title': 'ผลิตภัณฑ์ของเรา', 'products.cat_all': 'ทั้งหมด', 'products.cat_skincare': 'ดูแลผิว', 'products.cat_wellness': 'เวลเนส', 'products.cat_aroma': 'อโรมาเธอราปี',
-        'p1.name': 'เซรั่มบำรุงผิวหน้า', 'p1.desc': 'เซรั่มจากสารสกัดธรรมชาติ ช่วยให้ผิวเปล่งปลั่งและชุ่มชื้น',
-        'p2.name': 'ครีมบำรุงผิวกาย', 'p2.desc': 'ครีมบำรุงผิวจากอโลเวร่าและน้ำมันธรรมชาติ เพื่อผิวนุ่มเนียน',
-        'p3.name': 'อาหารเสริมคอลลาเจน', 'p3.desc': 'คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน',
-        'p4.name': 'น้ำมันหอมระเหย ลาเวนเดอร์', 'p4.desc': 'น้ำมันหอมระเหยบริสุทธิ์ ช่วยผ่อนคลายและนอนหลับสบาย',
+        'p1.name': 'กันเเดดตัว', 'p1.desc': 'เซรั่มจากสารสกัดธรรมชาติ ช่วยให้ผิวเปล่งปลั่งและชุ่มชื้น',
+        'p2.name': 'กันเเดดหน้าฝาทอง', 'p2.desc': 'ครีมบำรุงผิวจากอโลเวร่าและน้ำมันธรรมชาติ เพื่อผิวนุ่มเนียน',
+        'p3.name': 'ตัวกันเเฮงค์', 'p3.desc': 'คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน',
+        'p4.name': 'วิตซี', 'p4.desc': 'น้ำมันหอมระเหยบริสุทธิ์ ช่วยผ่อนคลายและนอนหลับสบาย',
         'p5.name': 'มาส์กหน้าชาเขียว', 'p5.desc': 'มาส์กหน้าจากชาเขียวออร์แกนิค ช่วยลดสิว และกระชับรูขุมขน',
         'p6.name': 'ชาดีท็อกซ์', 'p6.desc': 'ชาสมุนไพรออร์แกนิค ช่วยขับสารพิษและเสริมสร้างภูมิคุ้มกัน',
         'btn.buy': 'สั่งซื้อ', 'btn.line': 'สั่งซื้อ/แชทไลน์',
