--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         <div class="about-visual">
           <div class="luxury-frame">
             <div class="frame-content">
-               <img src="assets/about/about-visual.jpg" alt="Heaven and Beauty – About visual" loading="lazy">
+               <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="Heaven and Beauty – About visual" loading="lazy">
                 <defs>
                   <linearGradient id="luxuryGrad1" x1="0%" y1="0%" x2="100%" y2="100%">
                     <stop offset="0%" style="stop-color:#ffd700;stop-opacity:0.8" />
