--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <!-- Card 1 -->
         <div class="product-card" data-category="skincare">
           <div class="product-image">
-            <img src="assets/products/serum.jpg" alt="กันเเดดตัว" loading="lazy">
+            <img src="https://i.postimg.cc/rp8Cz6hX/image.jpg" alt="กันเเดดตัว" loading="lazy">
           </div>
           <div class="product-info">
             <h3 data-i18n="p1.name">กันเเดดตัว</h3>
