--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <p data-i18n="p1.desc">เซรั่มจากสารสกัดธรรมชาติ ช่วยให้ผิวเปล่งปลั่งและชุ่มชื้น</p>
             <div class="product-price">฿1,290</div>
             <div class="product-actions">
-              <a class="line-btn" href="https://line.me/R/ti/p/@heavenbeauty" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
+              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
               <button class="buy-btn" data-i18n="btn.buy">สั่งซื้อ</button>
             </div>
           </div>
@@ -340,7 +340,7 @@
             <p data-i18n="p2.desc">ครีมบำรุงผิวจากอโลเวร่าและน้ำมันธรรมชาติ เพื่อผิวนุ่มเนียน</p>
             <div class="product-price">฿890</div>
             <div class="product-actions">
-              <a class="line-btn" href="https://line.me/R/ti/p/@heavenbeauty" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
+              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
               <button class="buy-btn" data-i18n="btn.buy">สั่งซื้อ</button>
             </div>
           </div>
@@ -356,7 +356,7 @@
             <p data-i18n="p3.desc">คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน</p>
             <div class="product-price">฿1,590</div>
             <div class="product-actions">
-              <a class="line-btn" href="https://line.me/R/ti/p/@heavenbeauty" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
+              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
               <button class="buy-btn" data-i18n="btn.buy">สั่งซื้อ</button>
             </div>
           </div>
@@ -372,7 +372,7 @@
             <p data-i18n="p4.desc">น้ำมันหอมระเหยบริสุทธิ์ ช่วยผ่อนคลายและนอนหลับสบาย</p>
             <div class="product-price">฿690</div>
             <div class="product-actions">
-              <a class="line-btn" href="https://line.me/R/ti/p/@heavenbeauty" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
+              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
               <button class="buy-btn" data-i18n="btn.buy">สั่งซื้อ</button>
             </div>
           </div>
@@ -388,7 +388,7 @@
             <p data-i18n="p5.desc">มาส์กหน้าจากชาเขียวออร์แกนิค ช่วยลดสิว และกระชับรูขุมขน</p>
             <div class="product-price">฿590</div>
             <div class="product-actions">
-              <a class="line-btn" href="https://line.me/R/ti/p/@heavenbeauty" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
+              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
               <button class="buy-btn" data-i18n="btn.buy">สั่งซื้อ</button>
             </div>
           </div>
@@ -404,7 +404,7 @@
             <p data-i18n="p6.desc">ชาสมุนไพรออร์แกนิค ช่วยขับสารพิษและเสริมสร้างภูมิคุ้มกัน</p>
             <div class="product-price">฿490</div>
             <div class="product-actions">
-              <a class="line-btn" href="https://line.me/R/ti/p/@heavenbeauty" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
+              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
               <button class="buy-btn" data-i18n="btn.buy">สั่งซื้อ</button>
             </div>
           </div>
