--- a/index.html
+++ b/index.html
@@ -344,12 +344,12 @@
       <div class="products-grid">
         <div class="product-card" data-category="skincare">
           <div class="product-image">
-            <img src="https://i.postimg.cc/rp8Cz6hX/image.jpg" alt="กันเเดดตัว" loading="lazy">
+            <img src="https://i.postimg.cc/rp8Cz6hX/image.jpg" alt="อะโทมี่ เฟรช ซัน โลชั่น" loading="lazy">
           </div>
           <div class="product-info">
-            <h3 data-i18n="p1.name">กันเเดดตัว</h3>
-            <p data-i18n="p1.desc">เซรั่มจากสารสกัดธรรมชาติ ช่วยให้ผิวเปล่งปลั่งและชุ่มชื้น</p>
-            <div class="product-price">฿1,290</div>
+            <h3 data-i18n="p1.name">อะโทมี่ เฟรช ซัน โลชั่น</h3>
+            <p data-i18n="p1.desc">ครีมกันแดดสูตรอินออร์แกนิก</p>
+            <div class="product-price">฿xxxx</div>
             <div class="product-actions">
               <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
               <button class="buy-btn" data-i18n="btn.buy">สั่งซื้อ</button>
@@ -359,12 +359,12 @@
 
         <div class="product-card" data-category="skincare">
           <div class="product-image">
-            <img src="https://i.postimg.cc/HLp4jGSC/image.jpg" alt="กันเเดดหน้าฝาทอง" loading="lazy">
+            <img src="https://i.postimg.cc/HLp4jGSC/image.jpg" alt="อะโทมี่ แอบโซลูท" loading="lazy">
           </div>
           <div class="product-info">
-            <h3 data-i18n="p2.name">กันเเดดหน้าฝาทอง</h3>
-            <p data-i18n="p2.desc">ครีมบำรุงผิวจากอโลเวร่าและน้ำมันธรรมชาติ เพื่อผิวนุ่มเนียน</p>
-            <div class="product-price">฿890</div>
+            <h3 data-i18n="p2.name">อะโทมี่ แอบโซลูท</h3>
+            <p data-i18n="p2.desc">เอสเซนส์ ซันสกรีน เอสพีเอฟ 50+ / พีเอ++++</p>
+            <div class="product-price">฿xxx</div>
             <div class="product-actions">
               <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" data-i18n="btn.line">สั่งซื้อ/แชทไลน์</a>
               <button class="buy-btn" data-i18n="btn.buy">สั่งซื้อ</button>
