--- a/index.html
+++ b/index.html
@@ -447,7 +447,8 @@
           loading="lazy"
           allowfullscreen
           referrerpolicy="no-referrer-when-downgrade"
-          src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3852.6128267044464!2d102.1471251!3d15.0695165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31194bd6f78b22cd%3A0x8bb1d3e4f7001978!2z4LmB4Liq4LiH4LmE4LiX4Lii4LiZ4Lin4LiU4LmA4Lie4Li34LmI4Lit4Liq4Li44LiC4Lig4Liy4Lie!5e0!3m2!1sen!2sth!4v1759462544499!5m2!1sen!2sth" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>">
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3852.6128267044464!2d102.1471251!3d15.0695165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31194bd6f78b22cd%3A0x8bb1d3e4f7001978!2z4LmB4Liq4LiH4LmE4LiX4Lii4LiZ4Lin4LiU4LmA4Lie4Li34LmI4Lit4Liq4Li44LiC4Lig4Liy4Lie!5e0!3m2!1sen!2sth!4v1759462544499!5m2!1sen!2sth" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
       </div>
 
       <div class="social-icons" aria-label="โซเชียลมีเดีย">
