--- a/index.html
+++ b/index.html
@@ -452,10 +452,10 @@
       </div>
 
       <div class="social-icons" aria-label="โซเชียลมีเดีย">
-        <a href="https://facebook.com/yourpage" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.facebook.com/people/Sangthai-massage/100089101373153/?rdid=Rae5xEhsYZ1YKkLV&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F12DZ9Pgnbcz%2F" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
         <a href="https://instagram.com/yourpage" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://line.me/ti/p/~yourlineid" target="_blank" aria-label="LINE"><i class="fab fa-line"></i></a>
-        <a href="https://tiktok.com/@yourpage" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+        <a href="https://lin.ee/piYhcCd" target="_blank" aria-label="LINE"><i class="fab fa-line"></i></a>
+        <a href="https://www.tiktok.com/@sittined.n" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
       </div>
     </div>
   </section>
