--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Heaven and Beauty - Wellness & Organic Beauty</title>
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
-  <!-- Soft animated background -->
   <div class="bg-animation" aria-hidden="true">
     <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#f06292"/></svg></div>
     <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#e91e63"/></svg></div>
     <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#ec407a"/></svg></div>
   </div>
 
-  <!-- Header -->
   <header>
     <div class="container">
       <nav class="navbar" aria-label="หลัก">
@@ -25,8 +22,8 @@
             <img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="โลโก้ Heaven and Beauty" />
           </a>
           <ul class="nav-menu" id="navMenu">
-            <li><a href="index.html#home" class="active">หน้าแรก</a></li>
-            <li><a href="index.html#products">ผลิตภัณฑ์</a></li>
+            <li><a class="active" href="index.html">หน้าแรก</a></li>
+            <li><a href="products.html">ผลิตภัณฑ์</a></li>
             <li><a href="about.html">เกี่ยวกับเรา</a></li>
             <li><a href="services.html">สปา</a></li>
             <li><a href="wellness.html">Wellness</a></li>
@@ -47,216 +44,96 @@
     <div class="container inner">
       <h1>ยินดีต้อนรับสู่ Heaven and Beauty</h1>
       <p>เราคัดสรรส่วนผสมที่ดีที่สุดจากธรรมชาติ เพื่อสร้างสรรค์ผลิตภัณฑ์ออร์แกนิคที่ปลอดภัยและอ่อนโยนต่อผิวคุณ ดูแลสุขภาพและความงามอย่างธรรมชาติ</p>
-      <a href="#products" class="cta-button">สำรวจผลิตภัณฑ์</a>
+      <a href="products.html" class="cta-button">สำรวจผลิตภัณฑ์</a>
     </div>
   </section>
 
-  <!-- Products -->
+  <!-- Products teaser (สามารถลิงก์ไปหน้า products) -->
   <section class="products" id="products">
     <div class="container">
-      <h2>ผลิตภัณฑ์ของเรา</h2>
-
+      <h2>ผลิตภัณฑ์แนะนำ</h2>
       <div class="product-categories" role="tablist" aria-label="หมวดหมู่สินค้า">
-        <button class="category-btn active" data-category="all">ทั้งหมด</button>
-        <button class="category-btn" data-category="skincare">ดูแลผิว</button>
-        <button class="category-btn" data-category="wellness">เวลเนส</button>
-        <button class="category-btn" data-category="aromatherapy">อโรมาเธอราปี</button>
+        <a class="category-btn active" href="products.html">ดูทั้งหมดในหน้าผลิตภัณฑ์</a>
       </div>
-
       <div class="products-grid">
-        <!-- Cards same as previous index -->
         <div class="product-card" data-category="skincare">
-          <div class="product-image">
-            <img src="https://i.postimg.cc/rp8Cz6hX/image.jpg" alt="อะโทมี่ เฟรช ซัน โลชั่น" loading="lazy">
-          </div>
-          <div class="product-info">
-            <h3>อะโทมี่ เฟรช ซัน โลชั่น</h3>
-            <p>ครีมกันแดดสูตรอินออร์แกนิก</p>
-            <div class="product-price">฿xxxx</div>
-            <div class="product-actions">
-              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
-              <button class="buy-btn" type="button">สั่งซื้อ</button>
-            </div>
-          </div>
+          <div class="product-image"><img src="https://i.postimg.cc/rp8Cz6hX/image.jpg" alt="อะโทมี่ เฟรช ซัน โลชั่น" loading="lazy"></div>
+          <div class="product-info"><h3>อะโทมี่ เฟรช ซัน โลชั่น</h3><p>ครีมกันแดดสูตรอินออร์แกนิก</p><div class="product-price">฿xxxx</div><div class="product-actions"><a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a></div></div>
         </div>
         <div class="product-card" data-category="skincare">
-          <div class="product-image">
-            <img src="https://i.postimg.cc/HLp4jGSC/image.jpg" alt="อะโทมี่ แอบโซลูท" loading="lazy">
-          </div>
-          <div class="product-info">
-            <h3>อะโทมี่ แอบโซลูท</h3>
-            <p>เอสเซนส์ ซันสกรีน เอสพีเอฟ 50+ / พีเอ++++</p>
-            <div class="product-price">฿xxx</div>
-            <div class="product-actions">
-              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
-              <button class="buy-btn" type="button">สั่งซื้อ</button>
-            </div>
-          </div>
+          <div class="product-image"><img src="https://i.postimg.cc/HLp4jGSC/image.jpg" alt="อะโทมี่ แอบโซลูท" loading="lazy"></div>
+          <div class="product-info"><h3>อะโทมี่ แอบโซลูท</h3><p>เอสเซนส์ ซันสกรีน เอสพีเอฟ 50+ / พีเอ++++</p><div class="product-price">฿xxx</div><div class="product-actions"><a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a></div></div>
         </div>
         <div class="product-card" data-category="wellness">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/140x140.png?text=Collagen" alt="อาหารเสริมคอลลาเจน" loading="lazy">
-          </div>
-          <div class="product-info">
-            <h3>อาหารเสริมคอลลาเจน</h3>
-            <p>คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน</p>
-            <div class="product-price">฿1,590</div>
-            <div class="product-actions">
-              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
-              <button class="buy-btn" type="button">สั่งซื้อ</button>
-            </div>
-          </div>
-        </div>
-        <div class="product-card" data-category="aromatherapy">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/140x140.png?text=Lavender+Oil" alt="น้ำมันหอมระเหย ลาเวนเดอร์" loading="lazy">
-          </div>
-          <div class="product-info">
-            <h3>น้ำมันหอมระเหย ลาเวนเดอร์</h3>
-            <p>น้ำมันหอมระเหยบริสุทธิ์ ช่วยผ่อนคลายและนอนหลับสบาย</p>
-            <div class="product-price">฿690</div>
-            <div class="product-actions">
-              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
-              <button class="buy-btn" type="button">สั่งซื้อ</button>
-            </div>
-          </div>
-        </div>
-        <div class="product-card" data-category="skincare">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/140x140.png?text=Green+Tea+Mask" alt="มาส์กหน้าชาเขียว" loading="lazy">
-          </div>
-          <div class="product-info">
-            <h3>มาส์กหน้าชาเขียว</h3>
-            <p>มาส์กหน้าจากชาเขียวออร์แกนิค ช่วยลดสิว และกระชับรูขุมขน</p>
-            <div class="product-price">฿590</div>
-            <div class="product-actions">
-              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
-              <button class="buy-btn" type="button">สั่งซื้อ</button>
-            </div>
-          </div>
-        </div>
-        <div class="product-card" data-category="wellness">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/140x140.png?text=Detox+Tea" alt="ชาดีท็อกซ์" loading="lazy">
-          </div>
-          <div class="product-info">
-            <h3>ชาดีท็อกซ์</h3>
-            <p>ชาสมุนไพรออร์แกนิค ช่วยขับสารพิษและเสริมสร้างภูมิคุ้มกัน</p>
-            <div class="product-price">฿490</div>
-            <div class="product-actions">
-              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
-              <button class="buy-btn" type="button">สั่งซื้อ</button>
-            </div>
-          </div>
+          <div class="product-image"><img src="https://via.placeholder.com/140x140.png?text=Collagen" alt="อาหารเสริมคอลลาเจน" loading="lazy"></div>
+          <div class="product-info"><h3>อาหารเสริมคอลลาเจน</h3><p>คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน</p><div class="product-price">฿1,590</div><div class="product-actions"><a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a></div></div>
         </div>
       </div>
+      <div style="text-align:center;margin-top:16px"><a class="cta-button" href="products.html">ไปที่หน้าผลิตภัณฑ์ทั้งหมด</a></div>
     </div>
   </section>
 
-  <!-- About -->
+  <!-- About Preview -->
   <section class="about" id="about">
     <div class="container">
       <div class="grid">
         <div class="about-text">
           <h2>เกี่ยวกับเรา</h2>
           <div class="subtitle">Heaven and Beauty</div>
-          <p class="desc">เราเป็นแบรนด์ความงามและสุขภาพที่มุ่งมั่นในการนำเสนอผลิตภัณฑ์ออร์แกนิคคุณภาพสูง ด้วยความเชื่อมั่นว่าความงามที่แท้จริงต้องเริ่มต้นจากภายใน เราคัดสรรส่วนผสมจากธรรมชาติที่ดีที่สุดจากทั่วโลก เพื่อสร้างสรรค์ผลิตภัณฑ์ที่ปลอดภัย อ่อนโยน และมีประสิทธิภาพ</p>
+          <p class="desc">เราเป็นแบรนด์ความงามและสุขภาพที่มุ่งมั่นในการนำเสนอผลิตภัณฑ์ออร์แกนิคคุณภาพสูง ด้วยความเชื่อมั่นว่าความงามที่แท้จริงต้องเริ่มต้นจากภายใน</p>
           <div class="stats">
             <div class="stat"><div class="num">10+</div><div class="lbl">ปีแห่งประสบการณ์</div></div>
             <div class="stat"><div class="num">50K+</div><div class="lbl">ลูกค้าที่ไว้วางใจ</div></div>
             <div class="stat"><div class="num">100%</div><div class="lbl">ส่วนผสมธรรมชาติ</div></div>
           </div>
+          <p style="margin-top:14px"><a class="cta-button" href="about.html">อ่านต่อ</a></p>
         </div>
         <div class="about-visual">
-          <div class="luxury-frame">
-            <div class="frame-content">
-              <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="Heaven and Beauty – บรรยากาศร้าน" loading="lazy">
-            </div>
-          </div>
+          <div class="luxury-frame"><div class="frame-content"><img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="Heaven and Beauty – บรรยากาศร้าน" loading="lazy"></div></div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Services -->
+  <!-- Services Preview -->
   <section class="services" id="services">
     <div class="container">
       <h2>สปาและบริการนวด</h2>
       <div class="services-grid">
-        <div class="service-card">
-          <div class="service-icon"><i class="fas fa-spa" aria-hidden="true"></i></div>
-          <h3>นวดอโรมาเธอราปี</h3>
-          <p>ผ่อนคลายด้วยน้ำมันหอมระเหยบริสุทธิ์ ลดความเครียดและบำรุงผิวพรรณ</p>
-          <div class="service-price">60 นาที / ฿1,200</div>
-          <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" class="book-btn">จองเลย</a>
-        </div>
-        <div class="service-card">
-          <div class="service-icon"><i class="fas fa-hand-holding-heart" aria-hidden="true"></i></div>
-          <h3>นวดแผนไทย</h3>
-          <p>ศาสตร์แห่งการบำบัดแบบดั้งเดิม ช่วยคลายกล้ามเนื้อและปรับสมดุลร่างกาย</p>
-          <div class="service-price">90 นาที / ฿990</div>
-          <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" class="book-btn">จองเลย</a>
-        </div>
-        <div class="service-card">
-          <div class="service-icon"><i class="fas fa-hot-tub" aria-hidden="true"></i></div>
-          <h3>สปาหินร้อน</h3>
-          <p>ใช้หินภูเขาไฟเพื่อผ่อนคลายกล้ามเนื้อส่วนลึก กระตุ้นการไหลเวียนโลหิต</p>
-          <div class="service-price">75 นาที / ฿1,800</div>
-          <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" class="book-btn">จองเลย</a>
-        </div>
+        <div class="service-card"><div class="service-icon"><i class="fas fa-spa" aria-hidden="true"></i></div><h3>นวดอโรมาเธอราปี</h3><p>ผ่อนคลายด้วยน้ำมันหอมระเหยบริสุทธิ์ ลดความเครียดและบำรุงผิวพรรณ</p><div class="service-price">60 นาที / ฿1,200</div><a href="services.html" class="book-btn">ดูรายละเอียด</a></div>
+        <div class="service-card"><div class="service-icon"><i class="fas fa-hand-holding-heart" aria-hidden="true"></i></div><h3>นวดแผนไทย</h3><p>ศาสตร์แห่งการบำบัดแบบดั้งเดิม ช่วยคลายกล้ามเนื้อและปรับสมดุลร่างกาย</p><div class="service-price">90 นาที / ฿990</div><a href="services.html" class="book-btn">ดูรายละเอียด</a></div>
+        <div class="service-card"><div class="service-icon"><i class="fas fa-hot-tub" aria-hidden="true"></i></div><h3>สปาหินร้อน</h3><p>ใช้หินภูเขาไฟเพื่อผ่อนคลายกล้ามเนื้อส่วนลึก กระตุ้นการไหลเวียนโลหิต</p><div class="service-price">75 นาที / ฿1,800</div><a href="services.html" class="book-btn">ดูรายละเอียด</a></div>
       </div>
     </div>
   </section>
 
-  <!-- Wellness / Features -->
+  <!-- Wellness Preview -->
   <section class="features" id="wellness">
     <div class="container">
       <h2>ความงามและสุขภาพแบบองค์รวม</h2>
       <div class="features-grid">
-        <div class="feature-card"><div class="feature-icon">🌿</div><h3>100% ออร์แกนิค</h3><p>ส่วนผสมจากธรรมชาติล้วนๆ ปลอดสารเคมีที่เป็นอันตราย เพื่อผิวที่สุขภาพดีและเปล่งปลั่ง</p></div>
-        <div class="feature-card"><div class="feature-icon">🧘‍♀️</div><h3>ผ่อนคลายจิตใจ</h3><p>ผลิตภัณฑ์ที่ช่วยให้คุณรู้สึกสงบ ผ่อนคลาย และเติมพลังให้กับร่างกายและจิตใจ</p></div>
-        <div class="feature-card"><div class="feature-icon">✨</div><h3>เปล่งปลั่งธรรมชาติ</h3><p>เผยผิวที่สดใส เปล่งปลั่ง และมีสุขภาพดี ด้วยสูตรที่พัฒนาจากธรรมชาติ</p></div>
+        <div class="feature-card"><div class="feature-icon">🌿</div><h3>100% ออร์แกนิค</h3><p>ส่วนผสมจากธรรมชาติล้วนๆ ปลอดสารเคมีที่เป็นอันตราย</p></div>
+        <div class="feature-card"><div class="feature-icon">🧘‍♀️</div><h3>ผ่อนคลายจิตใจ</h3><p>รู้สึกสงบ ผ่อนคลาย และเติมพลัง</p></div>
+        <div class="feature-card"><div class="feature-icon">✨</div><h3>เปล่งปลั่งธรรมชาติ</h3><p>เผยผิวที่สดใส เปล่งปลั่ง และมีสุขภาพดี</p></div>
       </div>
+      <div style="text-align:center;margin-top:16px"><a class="cta-button" href="wellness.html">ดูโปรแกรม Wellness</a></div>
     </div>
   </section>
 
-  <!-- Contact -->
+  <!-- Contact Preview -->
   <section class="contact" id="contact">
     <div class="container">
       <h2>ติดต่อเรา</h2>
       <p class="contact-subtitle">เราพร้อมให้คำปรึกษาและดูแลความงามของคุณด้วยใจ<br>ติดตามข่าวสารและเคล็ดลับความงามเฉพาะจากเรา</p>
       <div class="contact-info">
-        <div class="contact-item">
-          <span class="contact-item-icon" aria-hidden="true">📍</span>
-          <h3>สาขาหลัก</h3>
-          <p>โครงการ HAVANA<br>เลขที่777 333 Cho Ho, เมือง Nakhon Ratchasima 30000</p>
-        </div>
-        <div class="contact-item">
-          <span class="contact-item-icon" aria-hidden="true">📞</span>
-          <h3>โทรศัพท์</h3>
-          <p>098-549-7939<br>เปิดทุกวัน 10:00–22:00 น.</p>
-        </div>
-        <div class="contact-item">
-          <span class="contact-item-icon" aria-hidden="true">💌</span>
-          <h3>อีเมล</h3>
-          <p>info@heavenbeauty.com<br>support@heavenbeauty.com<br><span>ตอบกลับภายใน 24 ชั่วโมง</span></p>
-        </div>
+        <div class="contact-item"><span class="contact-item-icon" aria-hidden="true">📍</span><h3>สาขาหลัก</h3><p>โครงการ HAVANA<br>เลขที่777 333 Cho Ho, เมือง Nakhon Ratchasima 30000</p></div>
+        <div class="contact-item"><span class="contact-item-icon" aria-hidden="true">📞</span><h3>โทรศัพท์</h3><p>098-549-7939<br>เปิดทุกวัน 10:00–22:00 น.</p></div>
+        <div class="contact-item"><span class="contact-item-icon" aria-hidden="true">💌</span><h3>อีเมล</h3><p>info@heavenbeauty.com<br>support@heavenbeauty.com<br><span>ตอบกลับภายใน 24 ชั่วโมง</span></p></div>
       </div>
-
-      <div class="map-wrap" role="region" aria-label="แผนที่สาขาหลัก">
-        <iframe loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps?q=%E0%B9%82%E0%B8%84%E0%B8%A3%E0%B8%87%E0%B8%81%E0%B8%B2%E0%B8%A3%20HAVANA%20777%20333%20Cho%20Ho%2C%20Nakhon%20Ratchasima%2030000&hl=th&z=16&output=embed"></iframe>
-      </div>
-
-      <div class="social-icons" aria-label="โซเชียลมีเดีย">
-        <a href="https://facebook.com/yourpage" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://instagram.com/yourpage" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://line.me/ti/p/~yourlineid" target="_blank" aria-label="LINE"><i class="fab fa-line"></i></a>
-        <a href="https://tiktok.com/@yourpage" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
-      </div>
+      <div style="text-align:center;margin-top:16px"><a class="cta-button" href="contact.html">ดูรายละเอียดการติดต่อ & แผนที่</a></div>
     </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <div class="container">
       <p>&copy; <span id="year"></span> Heaven &amp; Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
