--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
           </a>
           <ul class="nav-menu" id="navMenu">
             <li><a href="index.html">หน้าแรก</a></li>
-            <li><a href="index.html#products">ผลิตภัณฑ์</a></li>
+            <li><a href="products.html">ผลิตภัณฑ์</a></li>
             <li><a href="about.html">เกี่ยวกับเรา</a></li>
             <li><a href="services.html">สปา</a></li>
             <li><a href="wellness.html">Wellness</a></li>
